# MitoEdit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Mok2020_G1333_Final_with_Bystanders.py  README.md  conda_env.yaml  environment.yml  logging.py  main.py  mitocraft.py  mitoedit  mitoedit.service  pyproject.toml  rebuild_and_restart.sh  requirements.txt  talen-environment.yml  web-environment.yml
inputs/: annotated_human_mtDNA_10022024_for_bystanders_EDITED.xlsx
mitoedit/: __init__.py  cli.py  core.py
mitoedit/pipelines/: Cho_sTALEDs.py  Mok2020_unified.py  base_pipeline.py
mitoedit/talent_tools/: celeryconfig.py  entrez_cache.py  findTAL.py
mitoedit/web/templates/: index.html  login.html
mitoedit_lib/: core.py
pipelines/: Cho_sTALEDs.py  Mok2020_G1333.py  Mok2020_G1397.py  Mok2022_DddA11.py  Mok2022_DddA6.py  README.md  __init__.py  base_pipeline.py  mok2020_base_pipeline.py  unified_pipeline.py
resources/: mito.txt
scripts/: install_mitoedit_service.sh
software/talent_tools_master/: entrez_cache.py  findPairedRvdTALs.py  findRvdTAL.py  findTAL.py  findTAL_old.py  talconfig.py  talutil.py
talent_tools/: findSingleTALsite.py  findTAL.py  findTAL_old.py  talutil.py
talent_tools/utils/: seq_data_updater.py
test/: test.txt
test/input/: test.txt
test/output/: final_11696.xlsx  final_3243.xlsx  final_33.xlsx
web/: main.py
web/templates/: about.html  footer.html  index.html
